# Auto-Mat-Deck

./: .gitignore  AI_CONTEXT.md  CHANGELOG.md  README.md  RELEASE_NOTES.md  Taskfile.yml
.github/workflows/: ci.yml
apps/desktop/: Cargo.toml
docs/: sprint-2-connection-design.md  sprint-4-execution-design.md
docs/adr/: ADR-001-desktop-owns-configuration.md  ADR-002-desktop-initiates-pairing.md  ADR-003-native-execution-only.md  ADR-004-bind-ws-before-advertising.md  ADR-005-transport-independence.md  ADR-006-context-is-advisory.md  ADR-007-immutable-ids.md  ADR-008-command-reducer-pattern.md  ADR-009-context-rules-belong-to-document.md  ADR-010-desktop-runtime-ownership.md  ADR-011-active-profile-projection.md  ADR-012-foreground-context-observation-boundary.md  ADR-013-runtime-context-transition-semantics.md  ADR-014-projection-architecture.md  ADR-015-broadcast-semantics.md  ADR-016-thread-ownership.md  ADR-020-projection-transport.md  ADR-021-control-surface-projection.md  ADR-022-control-invoke.md  ADR-023-workflow-engine.md  ADR-024-trigger-engine.md  ADR-025-trigger-history.md  ADR-026-trust-store.md  ADR-027-discovery-architecture.md  ADR-028-pairing-architecture.md  ADR-029-device-identity-lifecycle.md  README.md
docs/architecture/: Core-Domain-Model.md  Discovery.md  Overview.md  Pairing-Authentication.md  Plugin-System.md  Profiles.md  Protocol.md  README.md  Security-Model.md  Synchronization.md  Triggers.md  (+22 more)
spikes/: README.md
spikes/ep-001-discovery-pairing/desktop/: Cargo.toml
spikes/ep-001-discovery-pairing/desktop/src/: actions.rs  main.rs
(+102 files in other folders)
